# monoid-embed

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.snapshots/: embed_bench_20260114_031044.md  embed_bench_20260114_031106.md  embed_bench_20260114_031929.md  embed_bench_20260114_032006.md  embed_bench_20260114_032018.md  embed_bench_20260114_032035.md  embed_bench_20260114_032335.md  embed_bench_20260114_032337.md  embed_bench_20260114_032340.md  embed_bench_20260114_032343.md  embed_bench_20260114_032347.md  embed_bench_20260114_032349.md  embed_bench_20260114_032352.md  embed_bench_20260114_032355.md  embed_bench_20260114_032359.md  embed_bench_20260114_154644.md  embed_bench_20260114_154646.md  embed_bench_20260114_154649.md  embed_bench_20260114_154651.md  embed_bench_20260114_165648.md  embed_bench_20260114_165650.md  embed_bench_20260114_165652.md  embed_bench_20260114_165654.md  embed_bench_20260114_170645.md  embed_bench_20260114_170944.md  embed_bench_20260114_170953.md  embed_bench_20260114_170955.md  embed_bench_20260114_170958.md  embed_bench_20260114_171000.md  embed_bench_20260114_171024.md  embed_bench_20260114_171243.md  embed_bench_20260114_171620.md  embed_bench_20260114_171659.md  embed_bench_20260114_171701.md  embed_bench_20260114_171703.md  embed_bench_20260114_171705.md  embed_bench_20260114_171716.md  embed_bench_20260114_171718.md  embed_bench_20260114_171721.md  embed_bench_20260114_171723.md  (+81 more)
benchmarks/: embed_regression_smoke.json
docs/: experiments.md  spec.md
scripts/: mteb_table.py  run_embed_bench.py  run_mteb_eval.py  (+12 more)
(+12 files in other folders)
